[FIX] Fix scrollbar

--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -6,250 +6,3 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-body {
-    overflow-x: hidden;
-}
-
-.container-custom,
-.container-custom-about-us,
-.container-custom-project,
-.container-custom-contacts,
-.container-custom-contact-us,
-.container-custom-service {
-    text-align: center;
-}
-
-.custom-content {
-    max-width: 100%;
-    margin: 0 auto;
-    /* Centra il contenuto */
-}
-
-.custom-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
-    width: 100%;
-    /* Rendi la row larga quanto la viewport */
-}
-
-.custom-col {
-    flex: 1;
-}
-
-.custom-heading {
-    font-size: 2.5em;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-.custom-description,
-.custom-subdescription,
-.custom-paragraph {
-    font-size: 1.2em;
-    color: #555;
-    margin-bottom: 15px;
-    /* Aggiunto spazio tra i paragrafi */
-}
-
-.custom-subheading {
-    font-size: 1.8em;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-.custom-service,
-.custom-project,
-.custom-blog-post {
-    text-align: left;
-    margin-bottom: 30px;
-    width: 100%;
-    /* Rendi il contenuto del blocco largo quanto la viewport */
-    max-width: 1200px;
-    /* Imposta una larghezza massima */
-    margin-left: auto;
-    margin-right: auto;
-    /* Centra il blocco */
-}
-
-.custom-service-title,
-.custom-project-title,
-.custom-blog-title {
-    font-size: 1.8em;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-.custom-service-description,
-.custom-project-description,
-.custom-blog-description {
-    font-size: 1em;
-    color: #555;
-    margin-bottom: 15px;
-    /* Aggiunto spazio tra i paragrafi */
-}
-
-.custom-container {
-    max-width: 100%;
-    margin: 0 auto;
-    /* Centra il contenuto */
-}
-
-.custom-label {
-    font-size: 1em;
-    color: #333;
-    margin-bottom: 5px;
-}
-
-.custom-input,
-.custom-textarea {
-    width: 100%;
-    padding: 8px;
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.custom-textarea {
-    height: 150px;
-    resize: none;
-}
-
-.custom-button {
-    padding: 10px 20px;
-    font-size: 1em;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.custom-button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-}
-
-.custom-error,
-.custom-loading,
-.custom-blog-date {
-    font-size: 0.8em;
-    color: #dc3545;
-    margin-top: 5px;
-}
-
-.custom-thankyou {
-    text-align: center;
-    margin-top: 5em;
-}
-
-.custom-blog-date {
-    font-size: 1em;
-    color: #555;
-    margin-bottom: 5px;
-}
-
-.card-size {
-    width: 18rem;
-    position: relative;
-
-    .text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        margin: 0;
-
-        h3 {
-            color: white;
-        }
-    }
-}
-
-.container-custom,
-.container-custom-about-us,
-.container-custom-project,
-.container-custom-contacts,
-.container-custom-contact-us,
-.container-custom-service {
-    background-color: rgba(13, 39, 28, 255);
-}
-
-.container-custom-contacts,
-.container-custom-contact-us {
-    background-color: rgba(20, 20, 18, 255);
-}
-
-.container-custom-about-us,
-.container-custom-project {
-    background-color: rgba(235, 235, 235, 255);
-}
-
-.custom-blog-post {
-    text-align: left;
-    margin-bottom: 30px;
-
-    .custom-blog-title {
-        font-size: 1.8em;
-        color: #333;
-        margin-bottom: 10px;
-    }
-
-    .custom-blog-date {
-        font-size: 1em;
-        color: #555;
-        margin-bottom: 5px;
-    }
-
-    .custom-blog-description {
-        font-size: 1.2em;
-        color: #555;
-        margin-bottom: 20px;
-    }
-}
-
-.custom-service,
-.custom-project {
-    text-align: left;
-    margin-bottom: 30px;
-
-    .custom-service-title,
-    .custom-project-title {
-        font-size: 1.8em;
-        color: #333;
-        margin-bottom: 10px;
-    }
-
-    .custom-service-description,
-    .custom-project-description {
-        font-size: 1em;
-        color: #555;
-        margin-bottom: 15px;
-        /* Aggiunto spazio tra i paragrafi */
-    }
-}
-
-.custom-button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-}
-
-.custom-error,
-.custom-loading {
-    font-size: 1em;
-    color: #333;
-    margin-top: 5px;
-}
-
-.custom-service,
-.custom-project,
-.custom-blog-post {
-    text-align: left;
-    margin-bottom: 30px;
-}
-
-.card-size img {
-    width: 35rem;
-}
